# C-Programming

./: README.md
MENDEZACSCD240LAB5/: CMakeLists.txt  main.c
MENDEZACSCD240LAB6/FilesAndArrays-1 (1)/: CMakeLists.txt
MENDEZACSCD240LAB6/FilesAndArrays-1 (1)/FilesAndArrays/FilesAndArrays/lab6-files_dynamic_arrays/: cscd240Lab6.c  lab6.c  lab6.h
MENDEZACSCD240LAB6/FilesAndArrays-1 (1)/FilesAndArrays/FilesAndArrays/lab6-files_dynamic_arrays/utils/: fileUtils.c  fileUtils.h  sortUtils.c  sortUtils.h
MENDEZACSCD240LAB7/MENDEZACSCD240LAB7/CSCD240_Lab7 STARTER/: CMakeLists.txt
MENDEZACSCD240LAB7/MENDEZACSCD240LAB7/CSCD240_Lab7 STARTER/CSCD240_Lab7 STARTER/Lab7/: cscd240Lab7.c  lab7.c  lab7.h
MENDEZACSCD240LAB7/MENDEZACSCD240LAB7/CSCD240_Lab7 STARTER/CSCD240_Lab7 STARTER/Lab7/utils/: fileUtils.c  fileUtils.h
MENDEZACSCD240LAB8/MENDEZACSCD240LAB8/MENDEZACSCD240LAB8/: CMakeLists.txt  main.c  ticket_system.c  ticket_system.h
